Kinda working compination of Page file and Content directory conventions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     ],
     "paths": {
       "@/*": [
-        "./src/*"
+        "./src/*",
       ]
     }
   },
@@ -33,6 +33,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "global.d.ts"
   ],
   "exclude": [
     "node_modules"
