--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "exhibition-um200-nextra",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "canopy": "ts-node canopy.mjs"
   },
   "dependencies": {
+    "@iiif/parser": "^2.1.7",
+    "@iiif/vault-helpers": "^0.10.0",
     "@tailwindcss/typography": "^0.5.16",
+    "flexsearch": "^0.7.43",
     "next": "15.1.4",
-    "nextra": "^4.0.0",
-    "nextra-theme-docs": "^4.0.0",
+    "nextra": "^4.0.1",
+    "nextra-theme-docs": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -22,10 +27,16 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "axios": "^1.7.9",
+    "charm": "^1.0.2",
+    "dotenv": "^16.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
+    "lodash": "^4.17.21",
     "postcss": "^8",
+    "slugify": "^1.6.6",
     "tailwindcss": "^4.0.0-beta.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
