Upgrade Nextra and dependencies to latest versions
- Updated Next.js from 15.1.4 to 15.1.6
- Upgraded Nextra from 4.0.3 to 4.1.1
- Updated Nextra Theme Docs from 4.0.3 to 4.1.1
- Upgraded Shiki and related packages to version 2.x
- Updated Katex from 0.16.20 to 0.16.21
- Added npm package manager version specification

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@iiif/vault-helpers": "^0.10.0",
     "@tailwindcss/typography": "^0.5.16",
     "flexsearch": "^0.7.43",
-    "next": "15.1.4",
-    "nextra": "^4.0.3",
-    "nextra-theme-docs": "^4.0.3",
+    "next": "15.1.6",
+    "nextra": "^4.1.1",
+    "nextra-theme-docs": "^4.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -38,5 +38,6 @@
     "tailwindcss": "^4.0.0-beta.9",
     "ts-node": "^10.9.2",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "npm@10.1.0"
 }
