Update dependencies, enhance localization, and improve layout structure
- Upgraded Next.js and Nextra to the latest versions for better performance and features.
- Introduced localization support with a new middleware for locale handling.
- Updated layout components to utilize localized content and improved navigation.
- Added new i18n support with English and Norwegian dictionaries.
- Enhanced metadata generation for better SEO and user experience.
- Refactored package.json and package-lock.json to reflect updated dependencies.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,10 @@
     "paths": {
       "@/*": [
         "./src/*",
+        "./lib/*",
+      ],
+      "@/canopy/*": [
+        "./.canopy/*"
       ]
     }
   },
