--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "@iiif/vault-helpers": "^0.10.0",
     "@tailwindcss/typography": "^0.5.16",
     "flexsearch": "^0.7.43",
-    "next": "15.1.6",
-    "nextra": "^4.1.1",
-    "nextra-theme-docs": "^4.1.1",
+    "gray-matter": "^4.0.3",
+    "next": "^15.3.4",
+    "nextra": "^4.2.17",
+    "nextra-theme-docs": "^4.2.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.0",
+    "@types/lodash": "^4.17.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
