--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "nextra": "^4.2.17",
     "nextra-theme-docs": "^4.2.17",
@@ -28,6 +32,7 @@
     "eslint-config-next": "15.3.4",
     "pagefind": "^1.3.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   },
   "overrides": {
