--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "1.2.3",
     "@samvera/clover-iiif": "2.12.0",
     "@tabler/icons-react": "^3.34.0",
     "class-variance-authority": "^0.7.1",
