Add carousel component and integrate with exhibition content. Update package dependencies and add new JSON data for historical items. Refactor NavCard titles for consistency.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@samvera/clover-iiif": "2.12.0",
     "@tabler/icons-react": "^3.34.0",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.522.0",
+    "clsx": "2.1.1",
+    "embla-carousel-react": "8.6.0",
+    "lucide-react": "0.522.0",
     "next": "15.3.4",
     "nextra": "^4.2.17",
     "nextra-theme-docs": "^4.2.17",
