--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "1.1.8",
     "@radix-ui/react-slot": "1.2.3",
     "@samvera/clover-iiif": "3.0.3",
     "@tabler/icons-react": "^3.34.0",
