--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openseadragon": "^5.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "1.6.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
