--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "1.6.5",
+    "react-medium-image-zoom": "5.4.0",
     "react-player": "3.4.0",
     "tailwind-merge": "^3.3.1"
   },
