Update package dependencies and versions in package.json and package-lock.json to ensure compatibility and stability, including upgrades to Next.js, Nextra, and React, along with various other packages.

--- a/package.json
+++ b/package.json
@@ -16,33 +16,33 @@
     "@radix-ui/react-separator": "1.1.8",
     "@radix-ui/react-slot": "1.2.3",
     "@samvera/clover-iiif": "3.0.3",
-    "@tabler/icons-react": "^3.34.0",
-    "class-variance-authority": "^0.7.1",
+    "@tabler/icons-react": "3.34.0",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "embla-carousel-react": "8.6.0",
     "lucide-react": "0.522.0",
-    "next": "15.3.4",
-    "nextra": "^4.6.0",
-    "nextra-theme-docs": "^4.6.0",
-    "openseadragon": "^5.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "16.0.7",
+    "nextra": "4.6.1",
+    "nextra-theme-docs": "4.6.1",
+    "openseadragon": "5.0.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-fast-marquee": "1.6.5",
     "react-medium-image-zoom": "5.4.0",
     "react-player": "3.4.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "3.3.3",
+    "@tailwindcss/postcss": "4.1.17",
+    "@types/node": "22",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "eslint": "9",
     "eslint-config-next": "15.3.4",
-    "pagefind": "^1.3.0",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "pagefind": "1.3.0",
+    "tailwindcss": "4",
+    "tw-animate-css": "1.3.4",
+    "typescript": "5"
   }
 }
