--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nextra": "4.6.0",
     "nextra-theme-docs": "4.6.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-lorem-ipsum": "1.4.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4",
