--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nextra-theme-docs": "4.6.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-lorem-ipsum": "1.4.10"
+    "react-lorem-ipsum": "1.4.10",
+    "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4",
